# pixoo64-cli

./: Cargo.toml
src/: arguments.rs  error.rs  main.rs
